# Sc2EM

./: CMakeLists.txt  LICENSE.txt  README.txt
src/: CMakeLists.txt
src/ExampleBot/: ExampleBot.cpp
src/Sc2Bindings/: Color.h  Position.h  Sc2Bindings.cpp  Sc2Bindings.h  SetContainer.h  Type.h  UnitTypes.cpp  UnitTypes.h
src/Sc2EM/: area.cpp  area.h  base.cpp  base.h  bwapiExt.cpp  bwapiExt.h  bwem.cpp  bwem.h  cp.cpp  cp.h  defs.h  exampleWall.cpp  exampleWall.h  examples.cpp  examples.h  graph.cpp  graph.h  gridMap.cpp  gridMap.h  map.cpp  map.h  mapDrawer.cpp  mapDrawer.h  mapImpl.cpp  mapImpl.h  mapPrinter.cpp  mapPrinter.h  neutral.cpp  neutral.h  tiles.cpp  tiles.h  utils.cpp  utils.h  winutils.cpp  winutils.h
